--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,7 +9,7 @@
 }
 
 html {
-    background-color: black;
+    background-color: #212529;
 }
 
 * {
